tests/integration/should-fail/InvalidPassageLink.twee
::Start
Should work: <<display Passage1>>
Should fail: <<display Passage2>>

::Passage1
Test
